feat(api): Add shop category creation
